# slurm

./: NEWS  RELEASE_NOTES  aclocal.m4  configure  configure.ac
contribs/nss_slurm/: libnss_slurm.c
contribs/pam_slurm_adopt/: pam_slurm_adopt.c
doc/html/: burst_buffer.shtml  heterogeneous_jobs.shtml
slurm/: slurm.h.in  slurmdb.h
src/api/: cancel.c  job_step_info.c  signal.c  step_ctx.c  step_launch.c
src/common/: Makefile.am  Makefile.in  gres.c  gres.h  log.c  plugstack.c  read_config.c  slurm_cred.c  slurm_jobacct_gather.c  slurm_opt.c  slurm_protocol_api.c  slurm_protocol_api.h  slurm_protocol_defs.c  slurm_protocol_defs.h  slurm_protocol_pack.c  slurm_protocol_pack.h  slurmdb_pack.c  slurmdbd_defs.h  slurmdbd_pack.c  stepd_api.c  stepd_api.h  xlua.c  xlua.h
src/lua/: Makefile.am  Makefile.in  lua_common.c  lua_common.h
src/plugins/jobcomp/lua/: Makefile.am  Makefile.in  jobcomp_lua.c
src/sacct/: print.c
src/sattach/: sattach.c
src/scontrol/: info_job.c  scontrol.c
src/slurmctld/: acct_policy.c  agent.c  fed_mgr.c  job_mgr.c  job_scheduler.c  job_scheduler.h  node_mgr.c  node_scheduler.c  proc_req.c  read_config.c  slurmctld.h  srun_comm.c  srun_comm.h  step_mgr.c
src/slurmdbd/: proc_req.c
src/squeue/: print.c
src/sstat/: print.c  sstat.c
src/sview/: admin_info.c  bb_info.c  common.c  defaults.c  front_end_info.c  grid.c  job_info.c  node_info.c  part_info.c  popups.c  resv_info.c  submit_info.c  sview.c  sview.h
testsuite/expect/: Makefile.am  Makefile.in  README  globals  test1.66  test1.75  test1.76  test1.84  test1.85  test1.88  (+36 more)
(+70 files in other folders)
